# venues

./: .gitignore  README.md  TODO.md  index.py  pipeline_check.db  pyproject.toml  requirements.txt  venue_sources.json  vercel.json
api/: cron.py  index.py
venue_finder/: __init__.py  main.py  manual_crud.md  pipeline.py  samples.py  webapp.py
venue_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
venue_finder/core/: __init__.py  config.py  database.py  keywords.py  models.py  repository.py  search_area.py  sources.py
venue_finder/processors/: __init__.py  capacity_parser.py  distance_calculator.py  duplicate_detector.py  feature_extractor.py  location_parser.py  price_calculator.py  price_parser.py  text_analyzer.py
venue_finder/scrapers/: __init__.py  airbnb_scraper.py  base.py  eventlocations_scraper.py  gruppenhaus_scraper.py
